# 360ce-ops

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
app/: auth_mw.py  config.py  main.py
app/data_sources/: data_volume.py  diag_runner.py  engine_api.py  monitor_logs.py
app/routes/: auth.py  diag.py  invalidations.py  performance.py  positions.py  pulse.py  signal_detail.py  signals.py  truth.py
app/static/: style.css
app/templates/: _pulse_card.html  base.html  diag.html  invalidations.html  login.html  performance.html  positions.html  pulse.html  signal_detail.html  signals.html  truth.html
tests/: test_signals_timestamps_and_positions.py  test_smoke.py
