[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ce-ops"
version = "0.1.0"
description = "Diagnostic dashboard for 360 Crypto Eye"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.27.1",
  "httpx==0.27.0",
  "jinja2==3.1.3",
  "itsdangerous==2.1.2",
  "python-multipart==0.0.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
